# aegis-gov

./: CMakeLists.txt  README.md  nano .gitignore
include/control/: DecisionEngine.hpp  Governor.hpp
include/discovery/: HealthMonitor.hpp  ProcScanner.hpp
include/logging/: Logger.hpp
src/: main.cpp  stress.cpp
src/control/: DecisionEngine.cpp  Governor.cpp
src/discovery/: HealthMonitor.cpp  ProcScanner.cpp
src/logging/: Logger.cpp
